--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ colored = "2"
 [[example]]
 name = "mnist_digits"
 path = "examples/mnist_handwritten_digits.rs"
+
+[[example]]
+name = "mnist_conv_digits"
+path = "examples/mnist_conv_digits.rs"
