Implement batch_valid_cross_correlation for Tensor. Implement Shape for Tensor

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,11 @@
             "cargo": {
                 "args": [
                     "test",
+                    "--",
+                    "--nocapture",
                     "--no-run",
                     "--lib",
-                    "--package=ai"
+                    "--package=ai",
                 ],
                 "filter": {
                     "name": "ai",
