Implement fast convolutions using an optimized toeplitz implementation. Run tests using --release flag for better benhmarking.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,11 +11,12 @@
             "cargo": {
                 "args": [
                     "test",
-                    "--",
-                    "--nocapture",
+                    "--release",
                     "--no-run",
                     "--lib",
                     "--package=ai",
+                    "--",
+                    "--nocapture",
                 ],
                 "filter": {
                     "name": "ai",
